# gmalloc_INAIR

./: AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
artifacts/: executable_kpi_result.md  indoor_lab_metrics.json  official_path_ui.html  path_comparison_ui.html  path_planner_exec_only_v1.json  path_ui.html  profile_comparison.json  progress_ui.html
docs/: algorithm_interface_plan.md  official_parity_audit.ko.md  official_parity_audit.md  subagents.md
scripts/: build_path_comparison_ui.py  build_path_ui.py  build_progress_ui.py  compare_path_planners.py  compare_profiles.py  plan_map.py  run_experiment.py
src/scopp/: config.py  experiment.py  path_comparison.py
src/scopp/algorithm/: auction.py  clustering.py  path_planning.py
src/scopp/extensions/: __init__.py  continuous_visibility.py
src/scopp/map/: visualization.py
src/scopp/ui/: __init__.py  path_comparison_ui.css  path_comparison_ui.html  path_comparison_ui.js  path_ui.html  progress_ui.html  progress_ui.js
tests/: test_config.py  test_experiment.py  test_path_comparison.py  test_path_comparison_ui.py  test_pipeline.py  test_progress_ui.py
tests/algorithm/: test_official_clustering.py  test_path_planning.py
tests/extensions/: test_continuous_visibility.py
