[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scopp-reproduction"
version = "0.1.0"
description = "Reproducible implementation of SCoPP"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "matplotlib>=3.7", "numpy>=1.24", "scikit-learn>=1.5,<2"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
